login selector aligned, validator stats row fixed, name row aligned, progress bar % set

--- a/client/styles/components/header/login_selector.scss
+++ b/client/styles/components/header/login_selector.scss
@@ -1,6 +1,9 @@
 @import "client/styles/shared";
 
 .LoginSelector {
+  position: fixed;
+  right: 0;
+  margin-right: 100px;
   display: flex;
   padding-left: 4px;
   .login-selector-left {
